<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_edit"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="withText" />

    <item
        android:id="@+id/call_phone"
        android:orderInCategory="100"
        android:title="@string/callTheNumber"
        app:showAsAction="withText" />

    <item
        android:id="@+id/open_website"
        android:orderInCategory="100"
        android:title="@string/openWebsite"
        app:showAsAction="withText" />

    <item
        android:id="@+id/item_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="withText" />
</menu>