<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cardViewModel"
            type="by.belstu.narkevich.contact_cards.viewmodels.CardViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/newMovieLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                android:padding="15dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/card_name_input"
                        android:text="@={cardViewModel.name}"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/card_address_input"
                        android:text="@={cardViewModel.address}"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/card_phone_input"
                        android:text="@={cardViewModel.phoneNumber}"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/card_website_input"
                        android:text="@={cardViewModel.website}"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_logo"
                        android:layout_gravity="center"
                        />
                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:background="@color/gray"
                        tools:ignore="UsingOnClickInXml" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_to_save"
                    style="@style/Theme.Contact_Cards"
                    android:textColor="@color/black"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/save"
                    app:layout_anchor="@id/newMovieLinearLayout"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"
                    tools:ignore="UsingOnClickInXml" />
            </LinearLayout>
        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>